# fanmi

./: .gitignore
fm.ahrs.apps/: .gitignore  CMakeLists.txt  make.sh  readme.md
fm.ahrs.apps/libs/libgpiod/lib/: libgpiod.la  libgpiod.so.2.2.2
fm.ahrs.apps/libs/libgpiod/lib/pkgconfig/: libgpiod.pc
fm.ahrs.apps/libs/urho3d/include/Urho3D/: Urho3D.h  Urho3DAll.h  librevision.h
fm.ahrs.apps/libs/urho3d/lib/pkgconfig/: Urho3D.pc
fm.ahrs.apps/libs/urho3d/libs/: libs.txt
fm.ahrs.apps/source/: CrowdNavigation.cpp  CrowdNavigation.h
fm.ahrs.apps/source/Calculation/: AhrsCalculation.cpp  AhrsCalculation.h
fm.ahrs.apps/source/base/: BaseApp.h  BaseApp.inl
fm.ahrs.apps/source/device/MMC56x3/: MMC56x3.cpp  MMC56x3.h
fm.ahrs.apps/source/device/TDK40607P/: ICM42670P.cpp
fm.ahrs.apps/source/io/: fm_i2c.h  unit_conversion.h
fm.ahrs.apps/source/thread/: thread_callback.h
motion.arduino.ICM42670P-main/: CMakeLists.txt  make.sh
motion.arduino.ICM42670P-main/examples/APEX_Pedometer/: APEX_Pedometer.cpp  CMakeLists.txt
motion.arduino.ICM42670P-main/examples/APEX_PedometerAndTilt/: APEX_PedometerAndTilt.cpp  CMakeLists.txt
motion.arduino.ICM42670P-main/examples/APEX_Tilt/: APEX_Tilt.cpp  CMakeLists.txt
motion.arduino.ICM42670P-main/examples/APEX_WakeOnMotion/: APEX_WakeOnMotion.cpp  CMakeLists.txt
motion.arduino.ICM42670P-main/examples/Algorithm_Fusion/: CMakeLists.txt  ErrorHelper.c  ErrorHelper.h  example_algo.c  example_algo.h  invn_algo_agm.h  main.c
motion.arduino.ICM42670P-main/examples/FIFO_Interrupt/: CMakeLists.txt  FIFO_Interrupt.cpp
motion.arduino.ICM42670P-main/examples/Polling_I2C/: CMakeLists.txt  Polling_I2C.cpp
motion.arduino.ICM42670P-main/examples/SelfTest/: CMakeLists.txt  SelfTest.cpp
motion.arduino.ICM42670P-main/src/: CMakeLists.txt  ICM42670P.cpp  ICM42670P.h  inv_time.c
motion.arduino.ICM42670P-main/src/imu/: inv_imu.h
