CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(icm42607)

MESSAGE(STATUS "###Start building ${PROJECT_NAME}###")

INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/.
    )

# LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/lib/ ${CMAKE_INSTALL_PREFIX}/lib64/)

AUX_SOURCE_DIRECTORY(imu IMU_SRCS)
SET(DIR_SRCS ${IMU_SRCS} inv_time.c ICM42670P.cpp)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${DIR_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC -Wl,-z,relro,-z,now)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC gpiod rt)

INSTALL(TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION ${RUNTIME_DEST}
    LIBRARY DESTINATION ${LIBRARY_DEST}
)
INSTALL(FILES ICM42670P.h DESTINATION ${INCLUDE_DEST}/imu)
