CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(SelfTest)

MESSAGE(STATUS "###Start building ${PROJECT_NAME}###")

INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../../src
    )

LINK_DIRECTORIES(src/)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC -Wl,-z,relro,-z,now)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC icm42607)

INSTALL(TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION ${RUNTIME_DEST}
    LIBRARY DESTINATION ${LIBRARY_DEST}
)
